# liftlog

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml
docs/superpowers/plans/: 2026-04-22-sliding-session.md  2026-05-06-progress-line-chart.md
docs/superpowers/specs/: 2026-04-22-sliding-session-design.md  2026-05-06-progress-line-chart-design.md  2026-06-25-last-show-rpe-design.md
migrations/: 001_create_users.sql  002_create_exercises.sql  003_create_workout_sessions.sql  004_create_workout_logs.sql  005_create_personal_records.sql  006_seed_default_exercises.sql  007_add_user_role.sql  008_create_sessions.sql  009_add_workout_share_token.sql  010_rebuild_sessions_with_last_touched_at.sql
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  migrations.rs  routes.rs  session.rs  state.rs  version.rs
src/handlers/: auth.rs  dashboard.rs  exercises.rs  favicon.rs  health.rs  mod.rs  settings.rs  stats.rs  workouts.rs
src/middleware/: auth.rs  mod.rs
src/models/: exercise.rs  exercise_session_metric.rs  from_row.rs  mod.rs  personal_record.rs  user.rs  workout_log.rs  workout_session.rs
src/repositories/: exercise_repo.rs  mod.rs  session_repo.rs  user_repo.rs  workout_repo.rs
static/: style.css
templates/: base.html  nav.html
templates/auth/: login.html  new_user.html  setup.html  users.html
templates/dashboard/: index.html
templates/exercises/: edit.html  list.html  new.html
templates/settings/: index.html
templates/stats/: exercise.html  index.html  prs.html
templates/workouts/: edit.html  edit_log.html  list.html  new.html  shared.html  show.html
tests/: auth_test.rs  error_test.rs  exercises_test.rs  favicon_test.rs  role_permissions_test.rs  settings_test.rs  stats_test.rs  workout_share_test.rs  workout_test.rs
tests/common/: mod.rs
tests/e2e/: .gitignore  package-lock.json  package.json  playwright.config.js
tests/e2e/features/auth/: _bootstrap.feature  guards.feature  login.feature  session.feature
tests/e2e/features/dashboard/: recent.feature
tests/e2e/features/exercises/: create.feature  manage.feature
tests/e2e/features/settings/: change_password.feature  sessions.feature
tests/e2e/features/sharing/: sharing.feature
tests/e2e/features/stats/: stats.feature
tests/e2e/features/users/: admin.feature
tests/e2e/features/workouts/: lifecycle.feature  pr_badge.feature  visibility.feature
tests/e2e/steps/: auth.steps.js  common.steps.js  dashboard.steps.js  exercises.steps.js  fixtures.js  settings.steps.js  sharing.steps.js  stats.steps.js  users.steps.js  workouts.steps.js
tests/e2e/support/: seeding.js
