[package]
name = "liftlog"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
askama = "0.15"
time = "0.3"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
axum-extra = { version = "0.12", features = ["cookie"] }
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
thiserror = "2"
anyhow = "1"

[dev-dependencies]
tokio-test = "0.4"
http-body-util = "0.1"
http = "1"
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
