[package]
name = "liftlog"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync"] }
askama = "0.16"
# Pinned: time 0.3.52 changed a sealed-trait internal API and broke cookie 0.18.1
# (build failure in #118). 0.3.53 restores compilation via a deprecated shim that
# time says it will remove — so 0.3.54+ is expected to break cookie again until it
# ships a fix. Hold at 0.3.53 until cookie 0.18.x adapts.
time = ">=0.3.53, <0.3.54"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
axum-extra = { version = "0.12", features = ["cookie"] }
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4.6", features = ["derive", "env"] }
dotenvy = "0.15"
thiserror = "2"
anyhow = "1"
mimalloc = "0.1"

[dev-dependencies]
tokio-test = "0.4"
http-body-util = "0.1"
http = "1"
tower = { version = "0.5", features = ["util"] }

[build-dependencies]
resvg = "0.47"

[profile.release]
lto = true
strip = true
codegen-units = 1

# Self-maintained lint set (originally seeded from Embark Studios' rust-ecosystem
# list). The bulk of the old itemised pedantic lints are now covered by the
# `pedantic` group; only the noisy/low-signal ones are opted back out, plus the
# restriction and nursery lints that have no safe umbrella group.
[lints.rust]
unexpected_cfgs = "deny"
unsafe_code = "deny"

[lints.clippy]
# Groups (priority -1 so the individual entries below win).
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Opt out of the noisy / low-signal pedantic lints.
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
duration_suboptimal_units = "allow"
items_after_statements = "allow"
many_single_char_names = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
return_self_not_must_use = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_lines = "allow"

# Restriction lints (no safe umbrella group — kept itemised).
dbg_macro = "warn"
exit = "warn"
float_cmp_const = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
mem_forget = "warn"
rest_pat_in_fully_bound_structs = "warn"
string_add = "warn"
todo = "warn"
unimplemented = "warn"
verbose_file_reads = "warn"

# Nursery picks (the nursery group as a whole is too unstable to enable).
debug_assert_with_mut_call = "warn"
fallible_impl_from = "warn"
trait_duplication_in_bounds = "warn"
